--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div class="top-container">
+        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm UhRizkon</h1>
         <p>A Cloud Engineer</p>
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img src="images/mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
         
